--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.15
+  timeago: ^3.7.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
