--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,6 +40,9 @@ dependencies:
   flutter_svg: ^2.0.15
   timeago: ^3.7.0
   http: ^1.2.2
+  cached_network_image: ^3.4.1
+  webview_flutter: ^4.10.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
