--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   webview_flutter: ^4.10.0
   url_launcher: ^6.3.1
   provider: ^6.1.2
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
